# signature-esp32

./: CMakeLists.txt  README.md
components/DSA/: CMakeLists.txt
components/DSA/common/: randombytes.c  randombytes.h
components/DSA/src/: dsa.c  dsa.h
main/: CMakeLists.txt  Kconfig  MQTT_communication.c  UART_communication.c  main.c  transport.h
particle-argon/: ADAPTATION_SUMMARY.md  ARCHITECTURE_COMPARISON.md  ARCHITECTURE_DIAGRAMS.md  BUILD_AND_DEPLOY.md  PIN_MAPPING.md  QUICKSTART.md  README.md  README_ADAPTATION.md  argon_config.h  particle_argon.ino  project.properties
